chore: update vercel config to force new deployment

--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,11 @@
     "deploymentEnabled": {
       "main": true
     }
-  }
+  },
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ]
 } 
